--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -615,8 +615,10 @@ pre tt:before,
 pre tt:after {
   content: "";
 }
+/*
 @media only screen and (max-width: 480px) {
   html {
     font-size: 100%;
   }
 }
+*/
