nav menu style.

--- a/src/styles/navmenu.less
+++ b/src/styles/navmenu.less
@@ -1,4 +1,6 @@
 .nav-logo{
+  width: 90px;
+  heigh: 90px;
   display: inline-block;
   margin-bottom: 25px;
 }
@@ -60,9 +62,10 @@
 
 .menu-panel{
   width: 500px;
+    height: 100%;
   position: fixed;
   top: 0;
-  left: -500px;
+  /*left: -500px;*/
   z-index: 999;
   background-size: cover !important;
   background-position: center center !important;
