--- a/src/styles/main-bg.css
+++ b/src/styles/main-bg.css
@@ -13,49 +13,49 @@
 /* INTRO / HOME VARIANTS */
 /*--------------------------------------------------------------*/
 .intro-01-bg{
-	background-image:url('http://placehold.it/1500x1000'); 
+	background-image:url('http://placehold.it/1500x1000');
 }
 .intro-03-bg{
-	background-image:url('http://placehold.it/1500x1000'); 
+	background-image:url('http://placehold.it/1500x1000');
 }
 .intro-07 .welcome-stage-bg-01{
-	background-image:url('http://placehold.it/1500x1000');  
+	background-image:url('http://placehold.it/1500x1000');
 }
 .intro-07 .welcome-stage-bg-02{
-	background-image:url('http://placehold.it/1500x1000'); 
+	background-image:url('http://placehold.it/1500x1000');
 }
 .intro-07 .welcome-stage-bg-03{
-	background-image:url('http://placehold.it/1500x1000'); 
+	background-image:url('http://placehold.it/1500x1000');
 }
 
 /*--------------------------------------------------------------*/
 /* PAGES AND SECTIONS */
 /*--------------------------------------------------------------*/
 .stats-bg{
-	background-image:url('http://placehold.it/1500x1000'); 
+	background-image:url('http://placehold.it/1500x1000');
 }
 .features-bg{
-	background-image:url('http://placehold.it/1500x1000'); 
+	background-image:url('http://placehold.it/1500x1000');
 }
 .single-project-bg{
-	background-image:url('http://placehold.it/1500x1000'); 
+	background-image:url('http://placehold.it/1500x1000');
 }
 .news-list-01:hover{
-	background-image:url('http://placehold.it/1500x1000') !important; 
+	background-image:url('http://placehold.it/1500x1000') !important;
 }
 .news-list-02:hover{
-	background-image:url('http://placehold.it/1500x1000') !important;  
+	background-image:url('http://placehold.it/1500x1000') !important;
 }
 .news-list-03:hover{
-	background-image:url('http://placehold.it/1500x1000') !important;  
+	background-image:url('http://placehold.it/1500x1000') !important;
 }
 .news-list-04:hover{
-	background-image:url('http://placehold.it/1500x1000') !important;  
+	background-image:url('http://placehold.it/1500x1000') !important;
 }
 
 /*--------------------------------------------------------------*/
 /* MISC ELEMENTS */
 /*--------------------------------------------------------------*/
 .menu-bg{
-	background:url('http://placehold.it/875x900'); 
-} 
+	background:url('//images.unsplash.com/photo-1557215600-03b1566b1e9d?ixlib=rb-1.2.1&auto=format&fit=crop&w=875&q=80');
+}
