--- a/src/components/layout/layout.less
+++ b/src/components/layout/layout.less
@@ -615,6 +615,11 @@ pre tt:before,
 pre tt:after {
   content: "";
 }
+
+//边框内的页面内容主容器
+main#page-content-wrapper {
+  padding: 20px;
+}
 /*
 @media only screen and (max-width: 480px) {
   html {
