--- a/src/pages/index.less
+++ b/src/pages/index.less
@@ -1,3 +1,5 @@
 .page-index-wrap {
-
+  background-attachment:fixed;
+  background-size: cover;
+  background-image: url('../images/background/index-bg-1.jpg');
 }
