bootstrap. project template page

--- a/src/components/layout/layout.less
+++ b/src/components/layout/layout.less
@@ -627,3 +627,9 @@ main#page-content-wrapper {
   }
 }
 */
+
+.page-background-container {
+  background-attachment:fixed;
+  background-size: cover;
+  background-image: url('../../images/background/index-bg-1.jpg');
+}
