--- a/src/styles/fonts.less
+++ b/src/styles/fonts.less
@@ -1,7 +1,7 @@
-@font1:'Open Sans', sans-serif;
-@font2:'Inconsolata', serif;
-@font3:'Raleway', sans-serif;
-@font4:'Montserrat', serif;
+@font1:"Helvetica Neue", Helvetica, Arial, "PingFang SC", "Hiragino Sans GB", "Heiti SC", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
+@font2:"Helvetica Neue", Helvetica, Arial, "PingFang SC", "Hiragino Sans GB", "Heiti SC", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
+@font3:"Helvetica Neue", Helvetica, Arial, "PingFang SC", "Hiragino Sans GB", "Heiti SC", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
+@font4:"Helvetica Neue", Helvetica, Arial, "PingFang SC", "Hiragino Sans GB", "Heiti SC", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
 
 
 .font1{
@@ -33,12 +33,12 @@ body, p{
 .works-filter li a > span{
 	font-family: @font2;
 }
-.works-item-inner h3{ 
+.works-item-inner h3{
 	font-family: @font4;
 }
 .works-item-inner p > span{
 	font-family: @font2;
-} 
-.mean-container .mean-nav ul li a{ 
+}
+.mean-container .mean-nav ul li a{
 	font-family: @font3;
 }
