useGatsbyImg as menu bg. use md in project page.

--- a/src/styles/main-bg.css
+++ b/src/styles/main-bg.css
@@ -57,5 +57,5 @@
 /* MISC ELEMENTS */
 /*--------------------------------------------------------------*/
 .menu-bg{
-	background-image: url('../images/background/menu-bg.jpg');
+	/*background-image: url('../images/background/menu-bg.jpg');*/
 }
